--- a/static/css/history.css
+++ b/static/css/history.css
@@ -175,3 +175,29 @@ button {
     border: 1px solid black;
     margin-right: 20px;
 }
+
+/* CSS cho phân trang */
+    .pagination {
+        margin: 20px 0;
+        text-align: center;
+    }
+
+    .pagination a {
+        display: inline-block;
+        padding: 5px 10px;
+        margin: 0 5px;
+        background-color: #f2f2f2;
+        border: 1px solid #ddd;
+        color: black;
+        text-decoration: none;
+        border-radius: 3px;
+    }
+
+    .pagination a.active {
+        background-color: #666;
+        color: white;
+    }
+
+    .pagination a:hover:not(.active) {
+        background-color: #ddd;
+    }
