--- a/templates/history.html
+++ b/templates/history.html
@@ -234,19 +234,18 @@
                         </div>
                     </div>
                     {% endfor %}
+                    <div class="pagination">
+                        <a href="#" id="prevPage">&laquo; Previous</a>
+                        <a href="#" class="pageNumber">1</a>
+                        <a href="#" class="pageNumber">2</a>
+                        <a href="#" class="pageNumber">3</a>
+                        <a href="#" id="nextPage">Next &raquo;</a>
+                    </div>
                 </div>
             </div>
+            
         </div>
-        <div class="page" style="text-align: center">
-            <a href="#">&laquo;</a>
-            <a href="#">1</a>
-            <a href="#" class="active">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a href="#">6</a>
-            <a href="#">&raquo;</a>
-        </div>
+        
     </div>
     {% else %}
     <div style="text-align: center">
